fix registration page spacing

--- a/client/src/components/registration-view/registration-view.scss
+++ b/client/src/components/registration-view/registration-view.scss
@@ -7,13 +7,12 @@ $white: #fff;
 
 .registration-form {
   margin: 3rem auto;
-  width: 50%;
+  width: 60%;
   text-align: center;
 }
 
 .register-title {
   margin: 3rem auto;
-  width: 30%;
   color: $light-grey;
   text-align: center;
 }
